# Syflow

./: README.md
api/: .gitignore  main.py  pyproject.toml
api/core/: config.py
automation/: README.md
automation/inventory/SFAUT-01-0-0-1/: Dockerfile  setup-minecraft-server.sh
automation/setup/provision-instances/: .gitignore  main.tf  variables.tf
automations/: README.md
backend/: .gitignore  README.md
backend/app/: logger.py  main.py  middleware.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: authentication.py
backend/app/v1/endpoints/: authentication.py  aws.py
backend/services/auth/: jwt_validation.py
dev-setup/: README.md
dev-setup/database/: docker-compose.yml
docs/: resources.md
docs/database/: schema.dbml
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/auth/[auth0]/: route.ts
